[package]
name = "zmq-coworkers"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.42", features = ["full"] }
zmq = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.11", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"

[profile.release]
opt-level = 3              # Maximum optimization
lto = "fat"                # Full Link Time Optimization
codegen-units = 1          # Better optimization, slower compile
panic = "abort"            # Smaller binary, no unwinding
strip = true               # Strip symbols from binary
debug = false              # No debug info in release

[profile.bench]
inherits = "release"
